<resources>
    <string name="app_name">Epicture</string>
    <string name="welcome">Welcome</string>
    <string name="epicture">Epicture</string>
    <string name="clientID">18acc2840b12049</string>
    <string name="clientSecret">2889b294a2c0992132070fd5f359d33aa0dbffc6</string>
    <string name="log_in_with_imgur">Log In with</string>
    <string name="imgurlogo">ImgurLogo</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profil">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_pictures">Upload</string>
    <string name="put_a_title_name">Put a title name</string>
    <string name="upload_to_imgur">Upload to Imgur</string>
    <string name="put_a_description">Put a description</string>
    <string name="favoris">Favoris</string>
    <string name="available_album">Available album :</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="gallery">Gallery</string>
    <string name="albums">Albums</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit profile</string>
    <string name="display_albums">Display albums</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="_100_views">+ 100 views</string>
    <string name="_min_100_views">- 100 views</string>
    <string name="view_s">View(s)</string>
    <string name="last_week">Last week</string>
    <string name="all_time">All time</string>
    <string name="period">Period</string>
    <string name="gif">GIF</string>
    <string name="png">PNG</string>
    <string name="jpeg">JPEG</string>
    <string name="which_type_of_picture">Which type of picture</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="show_albums">Show albums</string>
    <string name="available_avatars">Available avatars:</string>
    <string name="edit">Edit</string>
    <string name="filters">Filters</string>
    <string name="which_section_of_pictures">Which section of pictures</string>
    <string name="hot">Hot</string>
    <string name="top">Top</string>
    <string name="user">User</string>
    <string name="which_sort">Which sort</string>
    <string name="viral">Viral</string>
    <string name="time">Time</string>
    <string name="show_viral">Show viral</string>
    <string name="show_mature">Show mature</string>
    <string name="personal_information">Personal information</string>
    <string name="account_preferences">Account preferences</string>
    <string name="yes_pro">Yes</string>
    <string name="no_pro">No</string>
</resources>